--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -9,7 +9,7 @@ https://templatemo.com/tm-458-lavish
 body
 {
 	background: #000000;
-	color: #999;
+	color: #ffffff;
 	font-family: 'Raleway', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
@@ -171,7 +171,7 @@ h1,h2,h3,h4,h5
 /* start home */       
 #home
 	{
-        background: url('');
+        background: url('../images/home.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         padding-top: 120px;
@@ -189,6 +189,7 @@ h1,h2,h3,h4,h5
 #home h2
     {
         padding-bottom: 10px;
+        font-size: 50px;
     }
 #home .btn
     {
@@ -205,7 +206,7 @@ h1,h2,h3,h4,h5
     }
 #home .btn:hover
     {
-        background: #D43F52;
+        background: #ffa500;
         border-color: transparent;
     }
 /* end home */
@@ -218,6 +219,7 @@ h1,h2,h3,h4,h5
 #work h2
     {
         text-align: center;
+        font-size: 50px;
     }
 
 #work .media
@@ -229,7 +231,7 @@ h1,h2,h3,h4,h5
     {
         border: 2px solid #ffffff;
         border-radius: 50%;
-        color: #D43F52;
+        color: #ffa500;
         font-size: 24px;
         margin-right: 24px;
         width: 60px;
@@ -250,6 +252,25 @@ h1,h2,h3,h4,h5
         font-size: 20px;
         padding-bottom: 10px;
     }
+#work .bulb_glow
+    {
+        font-size: 50px;
+        border-radius: 50%;
+        color: #ffa500;
+        text-align: center;
+        margin-right: 20px;
+        text-shadow: 0px 0px 7px #ffa500;
+    }
+#work .bulb
+    {
+        font-size: 50px;
+        border-radius: 50%;
+        color: #ffffff;
+        text-align: center;
+        margin-right: 20px;
+        text-shadow: 0px 0px 0px #FFFFFF;
+    }
+
 /* end work */
 
 /* start about */
