--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -405,16 +405,17 @@ h1,h2,h3,h4,h5
     }
 #contact input[type="submit"]
     {
-        background: #D43F52;
-        border: 2px solid transparent;
+        background: none;
+        border: 2px solid white;
         color: #ffffff;
         font-weight: bold;
         transition: all 0.4s ease-in-out;
     }
 #contact input[type="submit"]:hover
     {
-        background: #ffffff;
-        color: #D43F52;
+        background: #FFA500;
+        border: 2px solid transparent;
+
     }
 /* end contact */
 
